--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,39 @@
 *D:/UE4jindianjiaocheng/UE4jindianjiaocheng1.zip filter=lfs diff=lfs merge=lfs -text
+Unreal[[:space:]]5【Sensei[[:space:]]Master[[:space:]]Class】 filter=lfs diff=lfs merge=lfs -text
+Unreal[[:space:]]Engine[[:space:]]4虚幻游戏引擎[[:space:]]展UV软件对比课程 filter=lfs diff=lfs merge=lfs -text
+Unreal[[:space:]]Engine[[:space:]]4虚幻游戏引擎地形制作大师教程 filter=lfs diff=lfs merge=lfs -text
+太阳能皮蛋[[:space:]]它叫7号[[:space:]]Blender＋UE5大型科幻机甲[[:space:]]场景案例进阶 filter=lfs diff=lfs merge=lfs -text
+翼狐_游戏影视CG场景《魔幻教室》全流程制作教学 filter=lfs diff=lfs merge=lfs -text
+888.jpg filter=lfs diff=lfs merge=lfs -text
+UE4jindianjiaocheng66.zip filter=lfs diff=lfs merge=lfs -text
+UE4资源管理大众版 filter=lfs diff=lfs merge=lfs -text
+Unreal[[:space:]]Engine[[:space:]]4虚幻游戏引擎UMG入门教程 filter=lfs diff=lfs merge=lfs -text
+室内外漫游UE4全流程室内vr漫游UE4室内外建筑表现视频教程 filter=lfs diff=lfs merge=lfs -text
+无垠[[:space:]]忆往昔[[:space:]]UE4[[:space:]]场景美术[[:space:]]软件入门到高手 filter=lfs diff=lfs merge=lfs -text
+魔法盒_alien_ue4_虚幻4MMO大型多人在线游戏特效课程 filter=lfs diff=lfs merge=lfs -text
+UE4jindianjiaocheng44.zip filter=lfs diff=lfs merge=lfs -text
+UE4游戏动漫特训营第1期 filter=lfs diff=lfs merge=lfs -text
+游戏技术特效与C\#脚本入门 filter=lfs diff=lfs merge=lfs -text
+UE4jindianjiaocheng22.zip filter=lfs diff=lfs merge=lfs -text
+nzpD2F6.tmp filter=lfs diff=lfs merge=lfs -text
+UE4教程 filter=lfs diff=lfs merge=lfs -text
+UE4游戏动漫短片系统特训营【第二期】 filter=lfs diff=lfs merge=lfs -text
+UE4高效场景搭建 filter=lfs diff=lfs merge=lfs -text
+aboutCG_月神_UE4_次时代和VR游戏特效高级课程第一期等多个文件 filter=lfs diff=lfs merge=lfs -text
+D:/UE4jindianjiaocheng/UE4jindianjiaocheng1.zip filter=lfs diff=lfs merge=lfs -text
+888.7z filter=lfs diff=lfs merge=lfs -text
+UE4jindianjiaocheng55.zip filter=lfs diff=lfs merge=lfs -text
+UE4户外森林场景全流程教学 filter=lfs diff=lfs merge=lfs -text
+UE4游戏买量视频特训营第二期 filter=lfs diff=lfs merge=lfs -text
+UE4面向美术的3D数学材质核心原理教学 filter=lfs diff=lfs merge=lfs -text
+UE4jindianjiaocheng1.zip filter=lfs diff=lfs merge=lfs -text
+UE4吉普力风格化图文教程四个 filter=lfs diff=lfs merge=lfs -text
+UE4特效高级课程-月神2期 filter=lfs diff=lfs merge=lfs -text
+特效 filter=lfs diff=lfs merge=lfs -text
+UE4特效高级课程-月神2期等多个文件 filter=lfs diff=lfs merge=lfs -text
+UE4手游遗忘之地 filter=lfs diff=lfs merge=lfs -text
+UE4游戏动漫制作全能系统特训营【第三期】 filter=lfs diff=lfs merge=lfs -text
+暴雪3A级《UE4自然特效》系统应用项目教学【中字独家】 filter=lfs diff=lfs merge=lfs -text
+虚幻引擎4游戏开发：使用蓝图制作大逃sha游戏 filter=lfs diff=lfs merge=lfs -text
+UE4jindianjiaocheng33.zip filter=lfs diff=lfs merge=lfs -text
+aboutCG_UE4_VR交互虚拟漫游完全流程教学等多个文件 filter=lfs diff=lfs merge=lfs -text
